clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr39240.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr39240.c" (c, x86_64-unknown-linux-gnu)
global l1 : u64i = 4294967292 [external, default, align 8, dso_local]
global l2 : u64i = 65532 [external, default, align 8, dso_local]
global l3 : u64i = 252 [external, default, align 8, dso_local]
global l4 : u64i = 18446744073709551612 [external, default, align 8, dso_local]
global l5 : u64i = 18446744073709551612 [external, default, align 8, dso_local]
global l6 : u64i = 18446744073709551612 [external, default, align 8, dso_local]

fn foo1(%arg11: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg11: s32i):
        %119 = alloca s32i, "x", align 4
        %120 = alloca s32i, "__retval", align 4
        store %arg11, %119
        %121 = load %119 : s32i, align 4
        store %121, %120
        %122 = load %120 : s32i
        return %122
}
fn bar1(%arg10: s32i) -> u32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg10: s32i):
        %111 = alloca s32i, "x", align 4
        %112 = alloca u32i, "__retval", align 4
        store %arg10, %111
        %113 = load %111 : s32i, align 4
        %114 = const 6 : s32i
        %115 = add %113, %114 : s32i [nsw]
        %116 = call @foo1(%115) : s32i [all]
        %117 = cast(integral) %116 : u32i
        store %117, %112
        %118 = load %112 : u32i
        return %118
}
fn foo2(%arg9: s32i) -> s16i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg9: s32i):
        %106 = alloca s32i, "x", align 4
        %107 = alloca s16i, "__retval", align 2
        store %arg9, %106
        %108 = load %106 : s32i, align 4
        %109 = cast(integral) %108 : s16i
        store %109, %107
        %110 = load %107 : s16i
        return %110
}
fn bar2(%arg8: s32i) -> u16i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg8: s32i):
        %98 = alloca s32i, "x", align 4
        %99 = alloca u16i, "__retval", align 2
        store %arg8, %98
        %100 = load %98 : s32i, align 4
        %101 = const 6 : s32i
        %102 = add %100, %101 : s32i [nsw]
        %103 = call @foo2(%102) : s16i [all]
        %104 = cast(integral) %103 : u16i
        store %104, %99
        %105 = load %99 : u16i
        return %105
}
fn foo3(%arg7: s32i) -> s8i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg7: s32i):
        %93 = alloca s32i, "x", align 4
        %94 = alloca s8i, "__retval", align 1
        store %arg7, %93
        %95 = load %93 : s32i, align 4
        %96 = cast(integral) %95 : s8i
        store %96, %94
        %97 = load %94 : s8i
        return %97
}
fn bar3(%arg6: s32i) -> u8i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: s32i):
        %85 = alloca s32i, "x", align 4
        %86 = alloca u8i, "__retval", align 1
        store %arg6, %85
        %87 = load %85 : s32i, align 4
        %88 = const 6 : s32i
        %89 = add %87, %88 : s32i [nsw]
        %90 = call @foo3(%89) : s8i [all]
        %91 = cast(integral) %90 : u8i
        store %91, %86
        %92 = load %86 : u8i
        return %92
}
fn foo4(%arg5: s32i) -> u32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s32i):
        %80 = alloca s32i, "x", align 4
        %81 = alloca u32i, "__retval", align 4
        store %arg5, %80
        %82 = load %80 : s32i, align 4
        %83 = cast(integral) %82 : u32i
        store %83, %81
        %84 = load %81 : u32i
        return %84
}
fn bar4(%arg4: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i):
        %72 = alloca s32i, "x", align 4
        %73 = alloca s32i, "__retval", align 4
        store %arg4, %72
        %74 = load %72 : s32i, align 4
        %75 = const 6 : s32i
        %76 = add %74, %75 : s32i [nsw]
        %77 = call @foo4(%76) : u32i [all]
        %78 = cast(integral) %77 : s32i
        store %78, %73
        %79 = load %73 : s32i
        return %79
}
fn foo5(%arg3: s32i) -> u16i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i):
        %67 = alloca s32i, "x", align 4
        %68 = alloca u16i, "__retval", align 2
        store %arg3, %67
        %69 = load %67 : s32i, align 4
        %70 = cast(integral) %69 : u16i
        store %70, %68
        %71 = load %68 : u16i
        return %71
}
fn bar5(%arg2: s32i) -> s16i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %59 = alloca s32i, "x", align 4
        %60 = alloca s16i, "__retval", align 2
        store %arg2, %59
        %61 = load %59 : s32i, align 4
        %62 = const 6 : s32i
        %63 = add %61, %62 : s32i [nsw]
        %64 = call @foo5(%63) : u16i [all]
        %65 = cast(integral) %64 : s16i
        store %65, %60
        %66 = load %60 : s16i
        return %66
}
fn foo6(%arg1: s32i) -> u8i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %54 = alloca s32i, "x", align 4
        %55 = alloca u8i, "__retval", align 1
        store %arg1, %54
        %56 = load %54 : s32i, align 4
        %57 = cast(integral) %56 : u8i
        store %57, %55
        %58 = load %55 : u8i
        return %58
}
fn bar6(%arg0: s32i) -> s8i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %46 = alloca s32i, "x", align 4
        %47 = alloca s8i, "__retval", align 1
        store %arg0, %46
        %48 = load %46 : s32i, align 4
        %49 = const 6 : s32i
        %50 = add %48, %49 : s32i [nsw]
        %51 = call @foo6(%50) : u8i [all]
        %52 = cast(integral) %51 : s8i
        store %52, %47
        %53 = load %47 : s8i
        return %53
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %39 = const -10 : s32i
        %40 = call @bar1(%39) : u32i [all]
        %41 = cast(integral) %40 : u64i
        %42 = get_global @l1 : u64i*
        %43 = load %42 : u64i, align 8, volatile
        %44 = cmp ne %41, %43 : bool
        if %44 {
            %45 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %32 = const -10 : s32i
        %33 = call @bar2(%32) : u16i [all]
        %34 = cast(integral) %33 : u64i
        %35 = get_global @l2 : u64i*
        %36 = load %35 : u64i, align 8, volatile
        %37 = cmp ne %34, %36 : bool
        if %37 {
            %38 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %25 = const -10 : s32i
        %26 = call @bar3(%25) : u8i [all]
        %27 = cast(integral) %26 : u64i
        %28 = get_global @l3 : u64i*
        %29 = load %28 : u64i, align 8, volatile
        %30 = cmp ne %27, %29 : bool
        if %30 {
            %31 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %18 = const -10 : s32i
        %19 = call @bar4(%18) : s32i [all]
        %20 = cast(integral) %19 : u64i
        %21 = get_global @l4 : u64i*
        %22 = load %21 : u64i, align 8, volatile
        %23 = cmp ne %20, %22 : bool
        if %23 {
            %24 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %11 = const -10 : s32i
        %12 = call @bar5(%11) : s16i [all]
        %13 = cast(integral) %12 : u64i
        %14 = get_global @l5 : u64i*
        %15 = load %14 : u64i, align 8, volatile
        %16 = cmp ne %13, %15 : bool
        if %16 {
            %17 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %4 = const -10 : s32i
        %5 = call @bar6(%4) : s8i [all]
        %6 = cast(integral) %5 : u64i
        %7 = get_global @l6 : u64i*
        %8 = load %7 : u64i, align 8, volatile
        %9 = cmp ne %6, %8 : bool
        if %9 {
            %10 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
