clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr39339.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr39339.c" (c, x86_64-unknown-linux-gnu)
global __const.main.e : rec_E = ConstRecord { ty: Named("rec_E"), members: Array([CirInt { ty: Named("s64i"), value: "5" }, CirInt { ty: Named("s64i"), value: "0" }, ConstRecord { ty: Named("rec_C"), members: Array([CirInt { ty: Named("u32i"), value: "6" }, ConstRecord { ty: Named("rec_D"), members: Array([CirInt { ty: Named("u32i"), value: "1434451967" }]) }]) }]) } [cir_private, default, dso_local, constant]

fn foo(%arg0: rec_E*, %arg1: u32i, %arg2: s32i, %arg3: rec_B*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_E*, %arg1: u32i, %arg2: s32i, %arg3: rec_B*):
        %48 = alloca rec_E*, "screen", align 8
        %49 = alloca u32i, "c", align 4
        %50 = alloca s32i, "columns", align 4
        %51 = alloca rec_B*, "row", align 8
        %52 = alloca rec_D, "attr", align 4
        %53 = alloca s64i, "col", align 8
        %54 = alloca s32i, "i", align 4
        store %arg0, %48
        store %arg1, %49
        store %arg2, %50
        store %arg3, %51
        %55 = load %48 : rec_E*, align 8
        get_member
        %57 = load %56 : s64i, align 8
        store %57, %53, align 8
        %58 = load %48 : rec_E*, align 8
        get_member
        get_member
        copy
        %61 = load %50 : s32i, align 4
        %62 = cast(integral) %61 : u32i
        get_member
        set_bitfield
        %65 = load %49 : u32i, align 4
        %66 = load %53 : s64i, align 8
        %67 = load %51 : rec_B*, align 8
        get_member
        %69 = load %68 : rec_A*, align 8
        get_member
        %71 = load %70 : rec_C*, align 8
        ptr_stride
        get_member
        store %65, %73, align 4
        %74 = load %53 : s64i, align 8
        %75 = load %51 : rec_B*, align 8
        get_member
        %77 = load %76 : rec_A*, align 8
        get_member
        %79 = load %78 : rec_C*, align 8
        ptr_stride
        get_member
        copy
        %82 = load %53 : s64i, align 8
        inc
        store %83, %53, align 8
        %84 = const 1 : u32i
        get_member
        set_bitfield
        scope {
                %87 = const 1 : s32i
                store %87, %54, align 4
                for cond {
                        %109 = load %54 : s32i, align 4
                        %110 = load %50 : s32i, align 4
                        cmp
                        condition %111
                } step {
                        %88 = load %54 : s32i, align 4
                        inc
                        store %89, %54, align 4
                        yield
                } body {
                        scope {
                                %90 = load %49 : u32i, align 4
                                %91 = load %53 : s64i, align 8
                                %92 = load %51 : rec_B*, align 8
                                get_member
                                %94 = load %93 : rec_A*, align 8
                                get_member
                                %96 = load %95 : rec_C*, align 8
                                ptr_stride
                                get_member
                                store %90, %98, align 4
                                %99 = load %53 : s64i, align 8
                                %100 = load %51 : rec_B*, align 8
                                get_member
                                %102 = load %101 : rec_A*, align 8
                                get_member
                                %104 = load %103 : rec_C*, align 8
                                ptr_stride
                                get_member
                                copy
                                %107 = load %53 : s64i, align 8
                                inc
                                store %108, %53, align 8
                                yield
                        }
                        yield
                }
                yield
        }
        return
}
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn memcmp(%arg0: void*, %arg1: void*, %arg2: u64i) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_E, "e", align 8
        %2 = alloca rec_C[4], "c", align 16
        %3 = alloca rec_A, "a", align 8
        %4 = alloca rec_B, "b", align 8
        %5 = alloca rec_D, "d", align 4
        %6 = const 0 : s32i
        store %6, %0
        %7 = get_global @__const.main.e : rec_E*
        copy
        get_member
        %9 = cast(array_to_ptrdecay) %2 : rec_C*
        store %9, %8, align 8
        get_member
        %11 = const 4 : u32i
        store %11, %10, align 8
        get_member
        store %3, %12, align 8
        get_member
        %14 = const 1 : u8i
        set_bitfield
        %16 = cast(bitcast) %2 : void*
        %17 = const 0 : s32i
        %18 = const 32 : u64i
        %19 = call @memset(%16, %17, %18) : void* [all]
        %20 = const 65 : u32i
        %21 = const 2 : s32i
        call @foo(%1, %20, %21, %4) [all]
        get_member
        get_member
        copy
        %24 = const 2 : u32i
        get_member
        set_bitfield
        scope {
                %40 = cast(bitcast) %5 : void*
                %41 = const 0 : s64i
                get_element
                get_member
                %44 = cast(bitcast) %43 : void*
                %45 = const 4 : u64i
                %46 = call @memcmp(%40, %44, %45) : s32i [all]
                %47 = cast(int_to_bool) %46 : bool
                if %47 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %27 = const 1 : u32i
        get_member
        set_bitfield
        scope {
                %32 = cast(bitcast) %5 : void*
                %33 = const 1 : s64i
                get_element
                get_member
                %36 = cast(bitcast) %35 : void*
                %37 = const 4 : u64i
                %38 = call @memcmp(%32, %36, %37) : s32i [all]
                %39 = cast(int_to_bool) %38 : bool
                if %39 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %30 = const 0 : s32i
        store %30, %0
        %31 = load %0 : s32i
        return %31
}
