clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr40057.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr40057.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg1: u64i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: u64i):
        %42 = alloca u64i, "x", align 8
        %43 = alloca s32i, "__retval", align 4
        %44 = alloca u64i, "y", align 8
        store %arg1, %42
        %45 = load %42 : u64i, align 8
        %46 = const 31 : u64i
        shift
        %48 = const 1 : u64i
        and
        store %49, %44, align 8
        scope {
                %52 = load %44 : u64i, align 8
                %53 = const 0 : u64i
                cmp
                if %54 {
                        %55 = const 0 : s32i
                        store %55, %43
                        %56 = load %43 : s32i
                        return %56
                }
                yield
        }
        %50 = const -1 : s32i
        store %50, %43
        %51 = load %43 : s32i
        return %51
}
fn bar(%arg0: s64i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s64i):
        %27 = alloca s64i, "x", align 8
        %28 = alloca s32i, "__retval", align 4
        %29 = alloca s64i, "y", align 8
        store %arg0, %27
        %30 = load %27 : s64i, align 8
        %31 = const 31 : s64i
        shift
        %33 = const 1 : s64i
        and
        store %34, %29, align 8
        scope {
                %37 = load %29 : s64i, align 8
                %38 = const 0 : s64i
                cmp
                if %39 {
                        %40 = const 0 : s32i
                        store %40, %28
                        %41 = load %28 : s32i
                        return %41
                }
                yield
        }
        %35 = const -1 : s32i
        store %35, %28
        %36 = load %28 : s32i
        return %36
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %22 = const 8 : u64i
                %23 = const 8 : u64i
                cmp
                if %24 {
                        %25 = const 0 : s32i
                        store %25, %0
                        %26 = load %0 : s32i
                        return %26
                }
                yield
        }
        scope {
                %18 = const 6042589866 : u64i
                %19 = call @foo(%18) : s32i [all]
                %20 = cast(int_to_bool) %19 : bool
                if %20 {
                        %21 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %13 = const 6579460778 : u64i
                %14 = call @foo(%13) : s32i [all]
                %15 = cast(int_to_bool) %14 : bool
                not
                if %16 {
                        %17 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %9 = const 6042589866 : s64i
                %10 = call @bar(%9) : s32i [all]
                %11 = cast(int_to_bool) %10 : bool
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %4 = const 6579460778 : s64i
                %5 = call @bar(%4) : s32i [all]
                %6 = cast(int_to_bool) %5 : bool
                not
                if %7 {
                        %8 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
