clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr40404.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr40404.c" (c, x86_64-unknown-linux-gnu)
global s : rec_S = Zero { ty: Named("rec_S") } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 131071 : u32i
        %3 = get_global @s : rec_S*
        get_member
        set_bitfield
        scope {
                %8 = get_global @s : rec_S*
                get_member
                get_bitfield
                %11 = const 4294967294 : u32i
                cmp
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %6 = const 0 : s32i
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
