clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr40493.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr40493.c" (c, x86_64-unknown-linux-gnu)
global x00 : u32i = CirInt { ty: Named("u32i"), value: "0" } [external, default, align 4, dso_local]
global x01 : u32i = CirInt { ty: Named("u32i"), value: "0" } [external, default, align 4, dso_local]
global y00 : u32i = CirInt { ty: Named("u32i"), value: "0" } [external, default, align 4, dso_local]
global y01 : u32i = CirInt { ty: Named("u32i"), value: "0" } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca rec_i386_operand_type, "a", align 4
        %4 = alloca rec_i386_operand_type, "b", align 4
        %5 = alloca rec_i386_operand_type, "c", align 4
        %6 = alloca rec_i386_operand_type, "d", align 4
        store %arg0, %0
        store %arg1, %1
        %7 = const 0 : s32i
        store %7, %2
        %8 = const 1 : u32i
        get_member
        get_member
        set_bitfield
        %12 = const 0 : u32i
        get_member
        get_member
        set_bitfield
        %16 = const 22 : u32i
        %17 = const 1 : s64i
        get_member
        get_element
        store %16, %19, align 4
        copy
        %20 = const 0 : s64i
        get_member
        get_element
        %23 = load %22 : u32i, align 4
        %24 = get_global @x00 : u32i*
        store %23, %24, align 4
        %25 = const 1 : s64i
        get_member
        get_element
        %28 = load %27 : u32i, align 4
        %29 = get_global @x01 : u32i*
        store %28, %29, align 4
        copy
        %30 = const 0 : s64i
        get_member
        get_element
        %33 = load %32 : u32i, align 4
        %34 = get_global @y00 : u32i*
        store %33, %34, align 4
        %35 = const 1 : s64i
        get_member
        get_element
        %38 = load %37 : u32i, align 4
        %39 = get_global @y01 : u32i*
        store %38, %39, align 4
        copy
        scope {
                get_member
                get_member
                get_bitfield
                %59 = cast(integral) %58 : s32i
                %60 = const 1 : s32i
                cmp
                if %61 {
                        %62 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                get_member
                get_member
                get_bitfield
                %52 = cast(integral) %51 : s32i
                %53 = const 0 : s32i
                cmp
                if %54 {
                        %55 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %42 = const 1 : s64i
                get_member
                get_element
                %45 = load %44 : u32i, align 4
                %46 = const 22 : u32i
                cmp
                if %47 {
                        %48 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %40 = const 0 : s32i
        store %40, %2
        %41 = load %2 : s32i
        return %41
}
