clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr40579.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr40579.c" (c, x86_64-unknown-linux-gnu)
fn itos(%arg2: s32i) -> s8i* [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %28 = alloca s32i, "num", align 4
        %29 = alloca s8i*, "__retval", align 8
        store %arg2, %28
        %30 = const #cir.ptr<null> : s8i*
        store %30, %29
        %31 = load %29 : s8i*
        return %31
}
fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i, %arg1: s8i*) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i*):
        %22 = alloca s32i, "i", align 4
        %23 = alloca s8i*, "x", align 8
        store %arg0, %22
        store %arg1, %23
        scope {
                %24 = load %22 : s32i, align 4
                %25 = const 4 : s32i
                cmp
                if %26 {
                        %27 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = alloca s32i, "i", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = const -2147483647 : s32i
        %5 = const 3 : s32i
        %6 = add %4, %5 : s32i [nsw]
        store %6, %1, align 4
        scope {
                %9 = const 0 : s32i
                store %9, %2, align 4
                for cond {
                        %19 = load %2 : s32i, align 4
                        %20 = const 4 : s32i
                        cmp
                        condition %21
                } step {
                        %10 = load %2 : s32i, align 4
                        inc
                        store %11, %2, align 4
                        yield
                } body {
                        scope {
                                %12 = alloca s8i*, "p", align 8
                                %13 = load %1 : s32i, align 4
                                dec
                                store %14, %1, align 4
                                %15 = load %1 : s32i, align 4
                                %16 = call @itos(%15) : s8i* [all]
                                store %16, %12, align 8
                                %17 = load %2 : s32i, align 4
                                %18 = load %12 : s8i*, align 8
                                call @foo(%17, %18) [all]
                                yield
                        }
                        yield
                }
                yield
        }
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
