clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr40747.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr40747.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %39 = alloca s32i, "i", align 4
        %40 = alloca s32i, "__retval", align 4
        store %arg0, %39
        %41 = load %39 : s32i, align 4
        %42 = const 4 : s32i
        %43 = cmp lt %41, %42 : bool
        %44 = ternary %43 ? { : bool
            %50 = load %39 : s32i, align 4
            %51 = const 0 : s32i
            %52 = cmp ge %50, %51 : bool
            yield %52
        } : {
            %49 = const false : bool
            yield %49
        }
        %45 = ternary %44 ? { : s32i
            %48 = load %39 : s32i, align 4
            yield %48
        } : {
            %47 = const 4 : s32i
            yield %47
        }
        store %45, %40
        %46 = load %40 : s32i
        return %46
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %34 = const -1 : s32i
        %35 = call @foo(%34) : s32i [all]
        %36 = const 4 : s32i
        %37 = cmp ne %35, %36 : bool
        if %37 {
            %38 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %29 = const 0 : s32i
        %30 = call @foo(%29) : s32i [all]
        %31 = const 0 : s32i
        %32 = cmp ne %30, %31 : bool
        if %32 {
            %33 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %24 = const 1 : s32i
        %25 = call @foo(%24) : s32i [all]
        %26 = const 1 : s32i
        %27 = cmp ne %25, %26 : bool
        if %27 {
            %28 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %19 = const 2 : s32i
        %20 = call @foo(%19) : s32i [all]
        %21 = const 2 : s32i
        %22 = cmp ne %20, %21 : bool
        if %22 {
            %23 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %14 = const 3 : s32i
        %15 = call @foo(%14) : s32i [all]
        %16 = const 3 : s32i
        %17 = cmp ne %15, %16 : bool
        if %17 {
            %18 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %9 = const 4 : s32i
        %10 = call @foo(%9) : s32i [all]
        %11 = const 4 : s32i
        %12 = cmp ne %10, %11 : bool
        if %12 {
            %13 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %4 = const 5 : s32i
        %5 = call @foo(%4) : s32i [all]
        %6 = const 4 : s32i
        %7 = cmp ne %5, %6 : bool
        if %7 {
            %8 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
