clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr41395_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr41395-2.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: rec_VEC_char_base*, %arg1: s32i) -> s16i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_VEC_char_base*, %arg1: s32i):
        %18 = alloca rec_VEC_char_base*, "p", align 8
        %19 = alloca s32i, "i", align 4
        %20 = alloca s16i, "__retval", align 2
        %21 = alloca s16i*, "q", align 8
        store %arg0, %18
        store %arg1, %19
        %22 = const 0 : s16i
        %23 = load %19 : s32i, align 4
        %24 = cast(integral) %23 : s64i
        %25 = load %18 : rec_VEC_char_base*, align 8
        get_member
        get_member
        get_element
        store %22, %28, align 2
        %29 = const 16 : s64i
        %30 = load %18 : rec_VEC_char_base*, align 8
        get_member
        get_member
        get_element
        store %33, %21, align 8
        %34 = const 1 : s16i
        %35 = load %21 : s16i*, align 8
        store %34, %35, align 2
        %36 = load %19 : s32i, align 4
        %37 = cast(integral) %36 : s64i
        %38 = load %18 : rec_VEC_char_base*, align 8
        get_member
        get_member
        get_element
        %42 = load %41 : s16i, align 2
        store %42, %20
        %43 = load %20 : s16i
        return %43
}
fn malloc(%arg0: u64i) -> void* [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_VEC_char_base*, "p", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @malloc : (u64i) -> void**
        %4 = const 20 : u64i
        %5 = const 256 : u64i
        %6 = add %4, %5 : u64i
        %7 = call @malloc(%6) : void* [all]
        %8 = cast(bitcast) %7 : rec_VEC_char_base*
        store %8, %1, align 8
        scope {
                %11 = load %1 : rec_VEC_char_base*, align 8
                %12 = const 16 : s32i
                %13 = call @foo(%11, %12) : s16i [all]
                %14 = cast(integral) %13 : s32i
                %15 = const 1 : s32i
                cmp
                if %16 {
                        %17 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %9 = const 0 : s32i
        store %9, %0
        %10 = load %0 : s32i
        return %10
}
